tests/rascal/negative/name_errors/L1/4_undecl-const.ob
MODULE Bla;

CONST
  x = Y;

VAR
  y: INTEGER;

BEGIN
  y := 1
END Bla.